# kinect-to-hololens

./: .gitmodules  LICENSE  README.md  build-plugin.ps1
cpp/: CMakeLists.txt  build-vs-solutions.ps1  build-vs.ps1  run-cmake.ps1
cpp/app/: CMakeLists.txt  imgui_test.cpp  imgui_win32_dx11.cpp  kinect_audio_receiver.cpp  kinect_audio_sender.cpp  kinect_listener.cpp  kinect_listener_app.cpp  kinect_reader.cpp  kinect_reader_app.cpp  kinect_receiver.cpp  kinect_receiver_tcp.cpp  kinect_receiver_udp.cpp  kinect_sender.cpp  kinect_sender_app.cpp  kinect_sender_tcp.cpp  kinect_sender_udp.cpp  receiver_modules.h  sender_modules.h
cpp/app/helper/: imgui_helper.h  kinect_helper.h  opencv_helper.h  shadow_remover.h  soundio_callback.h  soundio_helper.h
cpp/app/receiver/: audio_packet_receiver.h  sender_packet_receiver.h  video_message_assembler.cpp  video_message_assembler.h  video_renderer.h  video_renderer_state.h
cpp/app/sender/: audio_packet_sender.h  kinect_audio_sender.h  kinect_device_manager.cpp  kinect_device_manager.h  kinect_video_sender.cpp  kinect_video_sender.h  receiver_packet_receiver.h  receiver_state.h  remote_receiver.h  video_packet_retransmitter.h  video_packet_sender.h  video_sender_utils.h
cpp/apps/: CMakeLists.txt  kh_listener.cpp  kh_reader.cpp  kh_receiver.cpp  kh_sender.cpp  kinect_listener_app.cpp  kinect_reader_app.cpp  kinect_receiver_app.cpp  kinect_sender_app.cpp
cpp/apps/helper/: filesystem_helper.h  imgui_helper.h  opencv_helper.h  soundio_helper.h
cpp/apps/receiver/: audio_packet_receiver.h  sender_packet_receiver.h  video_message_assembler.cpp  video_message_assembler.h  video_message_queue.h  video_receiver_storage.h  video_renderer.h  video_renderer_state.h
cpp/apps/resources/: KinectSenderApp.aps  kh_sender.rc
cpp/apps/sender/: kinect_audio_sender.h  kinect_video_sender.cpp  kinect_video_sender.h  receiver_packet_receiver.h  remote_receiver.h  video_sender_utils.h
cpp/azure-kinect-samples/: PointCloudGenerator.cpp
cpp/examples/: CMakeLists.txt  kinect_player_demo.cpp  kinect_reader_demo.cpp  kinect_receiver_demo.cpp  kinect_sender_demo.cpp
cpp/examples/helper/: opencv_helper.h
cpp/imgui-1.73-examples/: CMakeLists.txt
cpp/plugin/: CMakeLists.txt  depth_texture.cpp  depth_texture.h  kh_plugin.cpp  plugin.cpp  texture_group.cpp  texture_group.h
cpp/resources/: KinectSender.aps  KinectSender.rc  KinectSenderApp.aps  KinectSenderApp.rc
cpp/src/: CMakeLists.txt  kh_audio.cpp  kh_audio.h  kh_core.cpp  kh_core.h  kh_depth_compression_helper.h  kh_frame_message.cpp  kh_frame_message.h  kh_frame_packet_collection.cpp  kh_frame_packet_collection.h  kh_opus.cpp  kh_opus.h  kh_packet_helper.h  kh_receiver.cpp  kh_receiver.h  kh_receiver_socket.cpp  kh_receiver_socket.h  kh_receiver_tcp.cpp  kh_receiver_tcp.h  kh_receiver_udp.cpp  kh_receiver_udp.h  kh_rvl.cpp  kh_rvl.h  kh_sender.cpp  kh_sender.h  kh_sender_socket.cpp  kh_sender_socket.h  kh_sender_tcp.cpp  kh_sender_tcp.h  kh_sender_udp.cpp  kh_sender_udp.h  kh_trvl.cpp  kh_trvl.h  kh_video_message.cpp  kh_video_message.h  kh_video_packet_collection.cpp  kh_video_packet_collection.h  kh_vp8.h  kh_vp8_decoder.cpp  kh_vp8_encoder.cpp  (+4 more)
cpp/src/azure_kinect/: CMakeLists.txt  azure_kinect.cpp  azure_kinect.h  azure_kinect_capture.cpp  azure_kinect_device.cpp  azure_kinect_image.cpp  azure_kinect_playback.cpp
cpp/src/core/: CMakeLists.txt  kh_core.h  kh_ffmpeg.h  kh_opus.cpp  kh_opus.h  kh_rvl.cpp  kh_trvl.cpp  kh_trvl.h  kh_vp8.h  kh_vp8_decoder.cpp  kh_vp8_encoder.cpp  kh_vp8_encoder2.cpp  kh_vp8_encoder2.h  kh_yuv.cpp  kh_yuv.h
cpp/src/modules/: CMakeLists.txt  occlusion_remover.cpp  occlusion_remover.h  receiver_packet_classifier.h  remote_receiver.h  video_packet_storage.h  video_pipeline.cpp  video_pipeline.h
cpp/src/native/: CMakeLists.txt  imgui_wrapper.h  kh_audio.cpp  kh_audio.h  kh_fec_packet_collection.cpp  kh_fec_packet_collection.h  kh_kinect.cpp  kh_kinect.h  kh_kinect_device.cpp  kh_kinect_device.h  kh_native.h  kh_occlusion_remover.cpp  kh_occlusion_remover.h  kh_opencv.cpp  kh_opencv.h  kh_packet.cpp  kh_packet.h  kh_packet_helper.cpp  kh_packet_helper.h  kh_packets.cpp  kh_packets.h  kh_receiver_socket.cpp  kh_receiver_socket.h  kh_sender_socket.cpp  kh_sender_socket.h  kh_shadow_remover.cpp  kh_shadow_remover.h  kh_soundio.cpp  kh_soundio.h  kh_time.h  kh_udp_socket.cpp  kh_udp_socket.h  kh_video_message.cpp  kh_video_message.h  kh_video_packet_collection.cpp  kh_video_packet_collection.h  kh_vp8_encoder.cpp  kh_vp8_encoder.h  kh_xor_packet_collection.cpp  opencv_utils.cpp  (+11 more)
cpp/src/receiver/: CMakeLists.txt  audio_receiver.h  sender_packet_classifier.h  video_receiver_storage.h  video_renderer.h
cpp/src/sender/: CMakeLists.txt  audio_sender.h  occlusion_remover.cpp  occlusion_remover.h  receiver_packet_classifier.h  remote_receiver.h  video_pipeline.cpp  video_pipeline.h  video_sender_storage.h
cpp/src/unity/: CMakeLists.txt  channel_texture.cpp  channel_texture.h  depth_texture.h  kh_plugin.cpp  plugin.cpp  texture_group.cpp  texture_group.h  two_channel_texture.cpp  two_channel_texture.h
cpp/src/utils/: CMakeLists.txt  soundio_utils.h
cpp/src/win32/: CMakeLists.txt  kh_kinect.h  soundio_utils.cpp
cpp/telepresence-toolkit/core/: CMakeLists.txt  kh_rvl.cpp  kh_rvl.h  kh_vp8_decoder.h  opus.cpp  opus.h  opus_utils.cpp  opus_utils.h  rvl.cpp  rvl.h  trvl.cpp  trvl.h  tt_core.h  vp8_decoder.cpp  vp8_decoder.h  yuv.cpp  yuv.h
cpp/telepresence-toolkit/native/: kh_kinect.h  kh_packet.cpp  kh_packet.h  kh_soundio.cpp  kh_soundio.h  kh_time.h  kh_udp_socket.h
cpp/telepresence-toolkit/unity/: CMakeLists.txt  channel_texture.cpp  depth_texture.cpp  depth_texture.h  graphics.cpp  kh_plugin.cpp  plugin.cpp  texture_group.cpp  texture_group.h  two_channel_texture.cpp  two_channel_texture.h
cpp/unity/: CMakeLists.txt  channel_texture.cpp  plugin.cpp  plugin.def  texture_group.h
telepresence-toolkit/src/core/: CMakeLists.txt  time.h  tt_core.h  vp8_decoder.h  yuv.cpp  yuv.h
telepresence-toolkit/src/unity/: CMakeLists.txt  channel_texture.h  graphics.cpp  (+2 more)
(+219 files in other folders)
